--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </div>
 </div>
 
-<!--<div class="join">test</div> -->
+<div class="join">Rejoin nous sur le serveur !!</div>
 
 </body>
 </html>
