--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </div>
   
   <div class="nav-links">
-    <a href=">news</a>
+    <a href="">news</a>
     <a href="">name</a>
     <a href="">name</a>
     <a href="">name</a>
