--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<!--
 <div class="nav">
   <input type="checkbox" id="nav-check">
   <div class="nav-header">
@@ -41,8 +41,8 @@
     <a href="">name</a>
   </div>
 </div>
-
-<div class="join">Rejoin nous sur le serveur !!</div>
+-->
+<div class="join">rien</div>
 
 </body>
 </html>
