--- a/index.html
+++ b/index.html
@@ -41,8 +41,14 @@
     <a href="">name</a>
   </div>
 </div>
--->
+
 <div class="join">rien</div>
+-->
+
+<a class="accueil" href="">Accueil</a>
+<a class="news" href="">News</a>
+<a class="boutique" href="">BOUTIQUE</a>
+
 
 </body>
 </html>
