--- a/index.html
+++ b/index.html
@@ -47,7 +47,17 @@
 
 <a class="accueil" href="">Accueil</a>
 <a class="news" href="">News</a>
-<a class="boutique" href="">BOUTIQUE</a>
+    
+    <div class="bouton">
+        <a href="#">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            Boutique !
+        </a>
+    </div>
+
 
 
 </body>
