--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
 
 <div class="join">rien</div>
 -->
+  
+      <div class="bouton">
+        <a href="#">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            Survole-moi !
+        </a>
+    </div>
 
 </body>
 </html>
