--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   
       <div class="bouton">
         <a href="#">
-            Survole-moi !
+            Clic-me !
         </a>
     </div>
 
