--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   
       <div class="bouton">
         <a href="#">
-            Clic-me please!
+            Clic-me please ¡!
         </a>
     </div>
 
